Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33892

Qml applications are terminating with sigsegv on android.

    XMLWordPrintable

Details

    • Android
    • 0c6743749f8bab4bbace3f3c3d1172d1ca959f7c

    Description

      When V4 is built with JIT support, QML application terminates on start-up. The trace below is from running the Maroon example.

      I/ActivityManager(  512): Displayed org.qtproject.example.maroon/org.qtproject.qt5.android.bindings.QtActivity: +2s551ms                                                                                   [415/9672]
      F/libc    ( 4317): Fatal signal 11 (SIGSEGV) at 0xdeadbaad (code=1), thread 4344 (.example.maroon)
      I/DEBUG   (  169): *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** ***
      I/DEBUG   (  169): Build fingerprint: 'google/occam/mako:4.3/JWR66Y/776638:user/release-keys'
      I/DEBUG   (  169): Revision: '11'
      I/DEBUG   (  169): pid: 4317, tid: 4344, name: .example.maroon  >>> org.qtproject.example.maroon <<<
      I/DEBUG   (  169): signal 11 (SIGSEGV), code 1 (SEGV_MAPERR), fault addr deadbaad
      I/DEBUG   (  169):     r0 00000027  r1 71c4e208  r2 00000008  r3 deadbaad
      I/DEBUG   (  169):     r4 00000000  r5 759ec8f4  r6 00000009  r7 75cd2590
      I/DEBUG   (  169):     r8 bef88454  r9 758ed000  sl 759ecf00  fp 759ec9e4
      I/DEBUG   (  169):     ip 00000001  sp 759ec8f0  lr 400a9df3  pc 400a7348  cpsr 600e0030
      I/DEBUG   (  169):     d0  0000000000000000  d1  0000000000000000
      I/DEBUG   (  169):     d2  0000000000000000  d3  0000000000000000
      I/DEBUG   (  169):     d4  0074006e006f0063  d5  002f0074006e0065
      I/DEBUG   (  169):     d6  006c006900750042  d7  0074007500420064
      I/DEBUG   (  169):     d8  0000000000000000  d9  0000000000000000
      I/DEBUG   (  169):     d10 0000000000000000  d11 0000000000000000
      I/DEBUG   (  169):     d12 0000000000000000  d13 0000000000000000
      I/DEBUG   (  169):     d14 0000000000000000  d15 0000000000000000
      I/DEBUG   (  169):     d16 4044000000000000  d17 7d20646175517475
      I/DEBUG   (  169):     d18 0000000000000000  d19 0000000000000000
      I/DEBUG   (  169):     d20 0000000000000000  d21 0000000000000000
      I/DEBUG   (  169):     d22 0000000000000000  d23 0000000000000000
      I/DEBUG   (  169):     d24 0000000000000000  d25 00bc800000b98000
      I/DEBUG   (  169):     d26 0000000000000000  d27 0000000000000000
      I/DEBUG   (  169):     d28 0707070703030303  d29 0003000000030000
      I/DEBUG   (  169):     d30 0001000000010000  d31 0001000000010000
      I/DEBUG   (  169):     scr 60000010
      I/DEBUG   (  169): 
      I/DEBUG   (  169): backtrace:
      I/DEBUG   (  169):     #00  pc 0001e348  /system/lib/libc.so
      I/DEBUG   (  169):     #01  pc 0001c510  /system/lib/libc.so (abort+4)
      I/DEBUG   (  169):     #02  pc 000affe4  /data/app-lib/org.qtproject.example.maroon-1/libgnustl_shared.so
      I/DEBUG   (  169):     #03  pc 000b026c  /data/app-lib/org.qtproject.example.maroon-1/libgnustl_shared.so (__gnu_Unwind_Resume+88)
      I/DEBUG   (  169):     #04  pc 000b0d54  /data/app-lib/org.qtproject.example.maroon-1/libgnustl_shared.so (___Unwind_Resume+20)
      I/DEBUG   (  169): 
      I/DEBUG   (  169): stack:
      I/DEBUG   (  169):          759ec8b0  73b6c8b0  /data/app-lib/org.qtproject.example.maroon-1/libQt5Qml.so
      I/DEBUG   (  169):          759ec8b4  0000025c  
      I/DEBUG   (  169):          759ec8b8  400d1170  /system/lib/libc.so
      I/DEBUG   (  169):          759ec8bc  71c4e208  
      I/DEBUG   (  169):          759ec8c0  00000015  
      I/DEBUG   (  169):          759ec8c4  400a8dd5  /system/lib/libc.so (__sflush+56)
      I/DEBUG   (  169):          759ec8c8  400d1264  /system/lib/libc.so
      I/DEBUG   (  169):          759ec8cc  400d11c4  /system/lib/libc.so
      I/DEBUG   (  169):          759ec8d0  00000000  
      I/DEBUG   (  169):          759ec8d4  400a9df3  /system/lib/libc.so (_fwalk+34)
      I/DEBUG   (  169):          759ec8d8  400a909d  /system/lib/libc.so (_cleanup)
      I/DEBUG   (  169):          759ec8dc  759ec8f4  [stack:4344]
      I/DEBUG   (  169):          759ec8e0  00000009  
      I/DEBUG   (  169):          759ec8e4  75cd2590  
      I/DEBUG   (  169):          759ec8e8  df0027ad  
      I/DEBUG   (  169):          759ec8ec  00000000  
      I/DEBUG   (  169):     #00  759ec8f0  73b6c820  /data/app-lib/org.qtproject.example.maroon-1/libQt5Qml.so
      I/DEBUG   (  169):          759ec8f4  fffffbdf  
      I/DEBUG   (  169):          759ec8f8  759ec91c  [stack:4344]
      I/DEBUG   (  169):          759ec8fc  76d998a0  
      I/DEBUG   (  169):          759ec900  76d998a0  
      I/DEBUG   (  169):          759ec904  731f5e50  /data/app-lib/org.qtproject.example.maroon-1/libgnustl_shared.so
      I/DEBUG   (  169):          759ec908  76d998a0  
      I/DEBUG   (  169):          759ec90c  759ec944  [stack:4344]
      I/DEBUG   (  169):          759ec910  76d998a0  
      I/DEBUG   (  169):          759ec914  400a5514  /system/lib/libc.so (__pthread_clone)
      I/DEBUG   (  169):     #01  759ec918  00000000  
      I/DEBUG   (  169):          759ec91c  731f5fe8  /data/app-lib/org.qtproject.example.maroon-1/libgnustl_shared.so
      ...
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              shausman Simon Hausmann
              stromme Christian
              Votes:
              3 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes